<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Pedestrian Navigator</string>
    <string name="start_detection">Start Detection</string>
    <string name="stop_detection">Stop Detection</string>
    <string name="settings">Settings</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_connected">Connected</string>
    <string name="status_detecting">Detecting…</string>
    <string name="esp32_ip">ESP32-CAM IP Address</string>
    <string name="esp32_ip_hint">192.168.1.100</string>
    <string name="confidence_threshold">Detection Confidence</string>
    <string name="alert_cooldown">Alert Cooldown (seconds)</string>
    <string name="enable_voice">Enable Voice Alerts</string>
    <string name="enable_vibration">Enable Vibration</string>
    <string name="detection_classes">Detection Classes</string>
    <string name="fps_label">FPS: %1$s</string>
    <string name="latency_label">Latency: %1$dms</string>
    <string name="detections_label">Detections: %1$d</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="warning_person">Warning! Person ahead!</string>
    <string name="warning_vehicle">Caution! Vehicle approaching!</string>
    <string name="warning_obstacle">Obstacle detected!</string>
</resources>
